clusters/homelab/apps/mastodon/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mastodon
  labels:
    gateway.infra.services/allow-routes: "true"
