clusters/homelab/apps/mastodon/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon
  namespace: mastodon
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames:
    - "mastodon.klimlive.de"
  rules:
    - backendRefs:
        - kind: Service
          name: mastodon-web
          port: 3000
